<resources>
    <string name="app_name">SuitmediaMobileTest</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="john_doe">John Doe</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="retry">Retry</string>
    <string name="third_screen">Third Screen</string>
    <string name="firstname_lastname">Firstname Lastname</string>
    <string name="email_email_com">EMAIL@EMAIL.COM</string>
    <string name="result">Result</string>
</resources>